# Trading_Bot

./: .cproject  .gitignore  .project  CMakeLists.txt  endpointhandler.cpp  endpointhandler.h  main.cpp
lib/libbinacpp/src/: binacpp.cpp  binacpp.h  binacpp_logger.cpp  binacpp_logger.h  binacpp_websocket.cpp  binacpp_websocket.h
lib/ta-lib/src/ta_func/: ta_PPO.c  ta_SMA.c
src/: Candle.cpp  Candle.h  SocketConnection.cpp  SocketConnection.h  Trading_Bot.cpp  indicators.cpp  indicators.h
